--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@tiptap/starter-kit": "^2.0.0-beta.199",
     "@tiptap/vue-3": "^2.0.0-beta.199",
     "axios": "^1.0.0",
+    "dayjs": "^1.11.6",
     "lodash": "^4.17.21",
     "slugify": "^1.6.5",
     "vue": "^3.2.37",
